# sqlx_issue

./: Cargo.toml  Dockerfile  docker-compose.yml  make_table.sql
src/: main.rs
